--- a/lab_1/products.html
+++ b/lab_1/products.html
@@ -2,11 +2,10 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta charset="utf-8">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 <body>
 <h2 align="center">Products</h2>
-<table class="table" border="1" width="80%" align="center">
+<table border="1" width="80%" align="center">
 	<tr bgcolor="#dfdfdf" width="80%">
 		<th>Image</th>
 		<th>Description</th>
@@ -21,7 +20,18 @@
 			Интерфейс: SATA III (6.0 Гб/с)
 			Высота, мм: 7
 		</td>
-		<td style="padding: 16px">699</td>
+		<td>833</td>
+	</tr>
+	<tr>
+		<td><img style="padding: 16px" src="https://repka.ua/upload/iblock/a1f/a1fd5f357509_detail.jpg"></td>
+		<td>Назначение: внутренний
+			Форм-фактор: 2.5
+			Емкость, ГБ: 64
+			Тип флеш-памяти NAND: MLC
+			Интерфейс: SATA III (6.0 Гб/с)
+			Высота, мм: 7
+		</td>
+		<td>962</td>
 	</tr>
 	<tr>
 		<td><img style="padding: 16px" src="https://repka.ua/upload/iblock/1d4/1d4433ce333b_detail.jpg"></td>
@@ -32,42 +42,10 @@
 			Интерфейс: SATA III (6.0 Гб/с)
 			Высота, мм: 7
 		</td>
-		<td style="padding: 16">944</td>
+		<td>969</td>
 	</tr>
 	<tr>
-		<td><img style="padding: 16" src="https://repka.ua/upload/iblock/332/332911667a0d_detail.jpg"></td>
-		<td>Назначение: внутренний
-			Форм-фактор: 2.5
-			Емкость, ГБ: 60
-			Тип флеш-памяти NAND: MLC
-			Интерфейс: SATA III (6.0 Гб/с)
-			Высота, мм: 7
-		</td>
-		<td style="padding: 16">947</td>
-	</tr>
-	<tr>
-		<td><img style="padding: 16" src="https://repka.ua/upload/iblock/a1f/a1fd5f357509_detail.jpg"></td>
-		<td>Назначение: внутренний
-			Форм-фактор: 2.5
-			Емкость, ГБ: 64
-			Тип флеш-памяти NAND: MLC
-			Интерфейс: SATA III (6.0 Гб/с)
-			Высота, мм: 7
-		</td>
-		<td style="padding: 16">969</td>
-	</tr>
-	<tr>
-		<td><img style="padding: 16" src="https://repka.ua/upload/iblock/865/8656a7d9c1a0_detail.jpg"></td>
-		<td>Назначение: внутренний
-			Форм-фактор: Mini-SATA
-			Емкость, ГБ: 60
-			Тип флеш-памяти NAND: MLC
-			Интерфейс: SATA III (6.0 Гб/с)
-		</td>
-		<td style="padding: 16">1 098</td>
-	</tr>
-	<tr>
-		<td><img style="padding: 16" src="https://repka.ua/upload/iblock/6d8/6d8ff1099c7b_detail.jpg"></td>
+		<td><img style="padding: 16px" src="https://repka.ua/upload/iblock/6d8/6d8ff1099c7b_detail.jpg"></td>
 		<td>Назначение: внутренний
 			Форм-фактор: 2.5
 			Емкость, ГБ: 120
@@ -75,10 +53,10 @@
 			Интерфейс: SATA III (6.0 Гб/с)
 			Высота, мм: 7
 		</td>
-		<td style="padding: 16">1 145</td>
+		<td>1 148</td>
 	</tr>
 	<tr>
-		<td><img style="padding: 16" src="https://repka.ua/upload/iblock/618/6182ad2bcc6c_detail.jpg"></td>
+		<td><img style="padding: 16px" src="https://repka.ua/upload/iblock/618/6182ad2bcc6c_detail.jpg"></td>
 		<td>Назначение: внутренний
 			Форм-фактор: 2.5
 			Емкость, ГБ: 120
@@ -86,10 +64,15 @@
 			Интерфейс: SATA III (6.0 Гб/с)
 			Высота, мм: 6.85
 		</td>
-		<td style="padding: 16">1 199</td>
+		<td>1 185</td>
 	</tr>
 	<tr>
-		<td><img style="padding: 16" src="https://repka.ua/upload/iblock/351/351b5382e2b8_detail.jpg"></td>
+		<td><img style="padding: 16px" src="https://repka.ua/upload/iblock/4ac/4ac4d1d302eb_detail.jpg"></td>
+		<td></td>
+		<td>1 188</td>
+	</tr>
+	<tr>
+		<td><img style="padding: 16px" src="https://repka.ua/upload/iblock/351/351b5382e2b8_detail.jpg"></td>
 		<td>Назначение: внутренний
 			Форм-фактор: 2.5
 			Емкость, ГБ: 128
@@ -97,28 +80,39 @@
 			Интерфейс: SATA III (6.0 Гб/с)
 			Высота, мм: 6.8
 		</td>
-		<td style="padding: 16">1 222</td>
+		<td>1 222</td>
 	</tr>
 	<tr>
-		<td><img style="padding: 16" src="https://repka.ua/upload/iblock/f69/f695e75c9558_detail.jpg"></td>
+		<td><img style="padding: 16px" src="https://repka.ua/upload/iblock/f69/f695e75c9558_detail.jpg"></td>
 		<td>Назначение: внутренний
 			Форм-фактор: 2.5
 			Емкость, ГБ: 120
 			Тип флеш-памяти NAND: TLC
 			Интерфейс: SATA III (6.0 Гб/с)
 		</td>
-		<td style="padding: 16">1 238</td>
+		<td>1 239</td>
 	</tr>
 	<tr>
-		<td><img style="padding: 16" src="https://repka.ua/upload/iblock/291/291deb21a6a4_detail.jpg"></td>
+		<td><img style="padding: 16px" src="https://repka.ua/upload/iblock/635/635c907731fe_detail.jpg"></td>
 		<td>Назначение: внутренний
 			Форм-фактор: 2.5
-			Емкость, ГБ: 128
-			Тип флеш-памяти NAND: MLC
+			Емкость, ГБ: 120
+			Тип флеш-памяти NAND: TLC
 			Интерфейс: SATA III (6.0 Гб/с)
 			Высота, мм: 7
 		</td>
-		<td style="padding: 16">1 337</td>
+		<td>1 300</td>
+	</tr>
+	<tr>
+		<td><img style="padding: 16px" src="https://repka.ua/upload/iblock/50a/50abf1362c02_detail.jpg"></td>
+		<td>Назначение: внутренний
+			Форм-фактор: 2.5
+			Емкость, ГБ: 120
+
+			Интерфейс: SATA III (6.0 Гб/с)
+			Высота, мм: 9.3
+		</td>
+		<td>1 303</td>
 	</tr>
 </table>
 </body>
